# Prototyping

./: README.md  TestMailIntegrationPython.py  calculator.py  index.html  main.js  package-lock.json  package.json  prototype.ipynb  pyproject.toml  renderer.js
Test_Mail_Integratoin_Java/Test_Mail_Integratoin_Java/: pom.xml
Test_Mail_Integratoin_Java/Test_Mail_Integratoin_Java/src/main/java/org/dhbw/softwarengineering/prototype/mail/integration/: MailIntegration.java  Main.java
electron/: index.html  main.js  package-lock.json  package.json
pytele5/: index.html  main.js
src/: html.py  main.rs
tauri_prototype/: package-lock.json  package.json
tauri_prototype/src-tauri/: Cargo.toml  tauri.conf.json
templates/: form.html
